[metadata]
name = xian
version = attr: abci.__version__
description = Python based ABCI Server for Tendermint
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/XianChain/xian
author = Xian Core Team
license = Apache 2.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.11
keywords = blockchain, tendermint, abci, python
project_urls =
    Source = https://github.com/XianChain/xian

[options]
packages = find:
package_dir =
    = src
include_package_data = true
python_requires = ~=3.11.0
install_requires =
    protobuf == 3.20.3
    colorlog >= 3.1.4
    certifi >= 2022.12.7
    pyflakes
    toml
    pynacl
    requests
    xian-py
    loguru
    urwid
    asyncpg

[options.packages.find]
where = src

[options.extras_require]
dev = 
    twine
    black
    build
